# BalaamBot

./: Dockerfile  Makefile  README.md  env.template  pyproject.toml  save_youtube_cookies.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/setup-python-with-uv/: action.yml
.github/workflows/: chrome-extension-release.yml  dependabot-auto-merge.yml  docker.yml  pyright.yml  ruff.yml  test.yml
chrome-extension/: README.md  manifest.json  options.html  options.js  popup.html  popup.js
src/balaambot/: README.md  config.py  cookie_server.py  discord_utils.py  main.py  utils.py
src/balaambot/audio_handlers/: multi_audio_source.py
src/balaambot/bot_commands/: cat_commands.py  music_commands.py  sfx_commands.py
src/balaambot/cats/: cat_handler.py
src/balaambot/sfx/: audio_sfx_jobs.py
src/balaambot/youtube/: download.py  jobs.py  metadata.py  utils.py
tests/: test_utils.py
tests/audio_handlers/: test_multi_audio_source.py
tests/cats/: test_cat_handler.py
tests/sfx/: test_audio_sfx_jobs.py
tests/youtube/: demo_youtube_audio.py  test_audio.py  test_youtube_jobs.py  test_youtube_utils.py
